--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "pdfbull",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "@google/genai": "^1.40.0",
-    "react-markdown": "^10.1.0",
-    "lucide-react": "^0.563.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+    "name": "pdfbull-root",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "install-all": "npm install && npm install --prefix client && npm install --prefix server",
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "client": "npm run dev --prefix client",
+        "server": "npm run dev --prefix server",
+        "build": "npm run build --prefix client && npm run build --prefix server",
+        "start": "npm start --prefix server"
+    },
+    "devDependencies": {
+        "concurrently": "^9.1.2"
+    }
 }
