--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
     "archiver": "^7.0.1",
     "canvas": "^3.2.1",
     "cors": "^2.8.6",
@@ -26,7 +28,9 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.624",
     "sharp": "^0.34.5",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0",
+    "yamljs": "^0.3.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
